# cppexam

./: CMakeLists.txt  main.cpp  optional.h  seq_tests.cpp  sequence.h
